Avoid shifting due to scrollbar visibility

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -12,6 +12,7 @@ html {
 }
 
 body {
+  width: 100vw;
   margin: 0;
   padding: 0;
   font-family: "Inter UI", -apple-system, BlinkMacSystemFont, "Roboto",
